Closed Bug 1978673 Opened 8 months ago Closed 8 months ago

The demo 3D image on canvas can sometimes be dragable.

Categories

(Core :: DOM: Selection, defect)

Firefox 141
Desktop
Windows 11
defect

Tracking

()

RESOLVED FIXED
143 Branch
Tracking Status
firefox-esr115 --- unaffected
firefox-esr128 --- unaffected
firefox-esr140 --- unaffected
firefox141 + fixed
firefox142 --- fixed
firefox143 --- fixed

People

(Reporter: alice0775, Assigned: emilio)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: nightly-community, regression, webcompat:platform-bug)

Attachments

(1 file)

STR:

  1. Open https://kdata1.com/2019/11/97568/
  2. Drag 3D image with mouse pointer

AR:
Sometimes, The image is actually dragable, and drag-image is displayed.
Screencast: https://youtu.be/9aEgdhkOW7c

ER:
The image rotates in 3D, but the image should not be dragable.

Regression window:
https://hg-edge.mozilla.org/integration/autoland/pushloghtml?fromchange=584aadc4313965c02a9d0a6b637714d3f812f4b2&tochange=ca42e3a0e39ccea55a166c68f47e7c53c526d3e9

FYI, Bug 1972967 does not fix this case.

:dmeehan,

In order to clarify the chronology of the problem occurrence,

Before Bug 1969829: no issue
After Bug 1969829: The canvas area becomes blue-gray, and the 3D object becomes blue and it becomes draggable.

Before Bug 1972967: same as the above
After Bug 1972967: the 3D object becomes draggable.

And, interestingly, this issue cannot be reproduced in Firefox 140 and 140esr.

Regressed by: 1972967

Thanks Alice for the extra info!

Flags: needinfo?(emilio)
Summary: The demo 3D image on canvas can sometimes be dragged. → The demo 3D image on canvas can sometimes be dragable.
See Also: → 1979409

This makes https://shapecatcher.com/ basically unusable.

[Tracking Requested - why for this release]: Makes it impossible to use some canvas based applications.

Duplicate of this bug: 1979409
Duplicate of this bug: 1979606

I provided the temporary fix here (CSS select non):
https://bugzilla.mozilla.org/show_bug.cgi?id=1979606

The severety is very high though! Every single app on the internet using 3D canvas is very likely broken right now. I have also tested a few apps that I know are using react-three/fiber and they're broken too.

Flags: needinfo?(masayuki)

I'm looking at this. Short term fix is probably just reintroducing the user-select rule...

Assignee: nobody → emilio

(In reply to Tom Schuster (MoCo) from comment #3)

This makes https://shapecatcher.com/ basically unusable.

I can repro.
Screencast: https://youtu.be/Gbnr2x8vQSI

Duplicate of this bug: 1979676
Duplicate of this bug: 1979543

I think this is the better fix, but for beta / release we should just
back out the regressing patch.

We should just back out the regressing patch from beta / release.

Flags: needinfo?(emilio) → needinfo?(dmeehan)
See Also: 1979409

:emilio Could you create a backout patch for this? There are two regressing bugs (one of which landed in 140) so might not be an easy backout.

Flags: needinfo?(dmeehan) → needinfo?(emilio)
Flags: needinfo?(emilio)
No longer regressed by: 1972967

https://phabricator.services.mozilla.com/D253706 which seems to cause this wasn't uplifted in bug 1969829, so only Firefox 141 and later is affected.

bug 1969829 patch https://phabricator.services.mozilla.com/D253706 is now reverted from 142.0b5
https://github.com/mozilla-firefox/firefox/commit/f18a70c3608c
https://hg.mozilla.org/releases/mozilla-beta/rev/1a1c782c259a
Revert "Bug 1969829 - Remove now unnecessary user-select override on <canvas>. r=masayuki,dshin" for causing bug 1978673 a=backout

Marking 142 as fixed by backout and adding NI for pascal in case he wants to backout of 141 for the dot release

Flags: needinfo?(pascalc)
Depends on: 1980038
Created web-platform-tests PR https://github.com/web-platform-tests/wpt/pull/54049 for changes under testing/web-platform/tests
Component: DOM: UI Events & Focus Handling → DOM: Selection
Blocks: 1980069
Status: NEW → RESOLVED
Closed: 8 months ago
Resolution: --- → FIXED
Target Milestone: --- → 143 Branch
Upstream PR merged by moz-wptsync-bot
No longer blocks: 1980069
Duplicate of this bug: 1980069
Flags: needinfo?(masayuki)
Duplicate of this bug: 1979054
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: