Bug 1978673 - Prevent selection changes on HTML <canvas> elements. r=masayuki,dom-core

I think this is the better fix, but for beta / release we should just
back out the regressing patch.

Differential Revision: https://phabricator.services.mozilla.com/D258986